# BlindSpot

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: boxes.rs  main.rs  persistence.rs  settings.rs  startup.rs  state.rs  tracker.rs  win32_overlay.rs
