[package]
name = "blindspot"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "blindspot"
path = "src/main.rs"

[package.metadata]
# Windows subsystem — no console

[dependencies]
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
windows = { version = "0.56", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_HiDpi",
    "Win32_System_ProcessStatus",
    "Win32_UI_Accessibility",
    "Win32_Media",
    "Win32_Security",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tray-icon = "0.14"
global-hotkey = "0.5"
winreg = "0.52"
rfd = "0.14"
image = "0.25"

[build-dependencies]
winres = "0.1"